--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "nextjs-boiler-plate",
+  "name": "Artfi-world",
   "version": "0.1.0",
+  "author": "Taha Chaghtai",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,7 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.14",
     "framer-motion": "^5.5.5",
+    "moment": "^2.29.4",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -17,7 +23,10 @@
     "sass": "^1.60.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
