--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "framer-motion": "^5.5.5",
     "moment": "^2.29.4",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
     "sass": "^1.60.0"
   },
   "devDependencies": {
